--- a/Tool Tutorial/nltk-tutorial.ipynb
+++ b/Tool Tutorial/nltk-tutorial.ipynb
@@ -9,7 +9,11 @@
    },
    "source": [
     "# Natural Language Toolkit (nltk):\n",
-    "    It is library with interfaces to work with human language data.  "
+    "    NLTK is a library with interfaces to work with human language data.  "
+    " The main objective of this package is to break down and analyze components of language for a variety of uses. 
+    Language can often be complex and difficult to analyze, even the same language has various dialects depending on location. 
+    Nltk can help us understand language by manipulating written documents and giving context to an ever evolving way of communicating. 
+    This has practical applications in a variety of fields, from sociologists studying speech patterns in various areas of the world, to business analysts being able to learn more about their customers on social media." 
    ]
   },
   {
